--- a/src/Themes/basic-theme.scss
+++ b/src/Themes/basic-theme.scss
@@ -54,6 +54,7 @@
   --dark-background-color: var(--color-riverstone_gray);
   --dark-background-on-secondary-color: var(--color-riverstone_gray);
   --secondary-background-color: var(--color-snow_white);
+  --secondary-background-color-rgb: 255, 255, 255;
   //deprecated - use secondary-background-color
   --dialog-background-color: var(--color-snow_white);
 
