--- a/src/Themes/dark-theme.scss
+++ b/src/Themes/dark-theme.scss
@@ -52,6 +52,7 @@
   --dark-background-color: #393b53;
   --dark-background-on-secondary-color: #4b4e69;
   --secondary-background-color: #30324e;
+  --secondary-background-color-rgb: 48, 50, 78;
   //deprecated - use secondary-background-color
   --dialog-background-color: #30324e;
 
