--- a/src/Themes/hacker-theme.scss
+++ b/src/Themes/hacker-theme.scss
@@ -57,6 +57,7 @@ $primary_color: #fe78c6;
   --dark-background-color: #303241;
   --dark-background-on-secondary-color: #595959;
   --secondary-background-color: #30324e;
+  --secondary-background-color-rgb: 48, 50, 78;
   //deprecated - use secondary-background-color
   --dialog-background-color: #30324e;
 
