--- a/src/Themes/black-theme.scss
+++ b/src/Themes/black-theme.scss
@@ -51,6 +51,7 @@
   --dark-background-color: #2c2c2c;
   --dark-background-on-secondary-color: #4b4e69;
   --secondary-background-color: #2c2c2c;
+  --secondary-background-color-rgb: 44, 44, 44;
   //deprecated - use secondary-background-color
   --dialog-background-color: #2c2c2c;
 
