--- a/src/colors.scss
+++ b/src/colors.scss
@@ -1,26 +1,28 @@
-:root {
+:root,
+.light-app-theme,
+.default-app-theme {
   --color-asphalt: #676879;
   --color-asphalt-with-opacity: rgba(103, 104, 121, 0.1);
   --color-light_blue: #61caf7;
   --color-basic_blue: #0073ea;
   --color-basic_light_blue: #c7e6fa;
-  --color-dark_blue: #0060B9;
+  --color-dark_blue: #0060b9;
   --color-link_color: #1f76c2;
   --color-snow_white: #ffffff;
   --color-snow_white-with-opacity: rgba(255, 255, 255, 0.4);
 
   --color-success: #258750;
   --color-success-hover: #007038;
-  --color-success-highlight: #BBDBC9;
+  --color-success-highlight: #bbdbc9;
 
-  --color-error: #D83A52;
-  --color-error-hover: #B63546;
-  --color-error-highlight: #F4C3CB;
+  --color-error: #d83a52;
+  --color-error-hover: #b63546;
+  --color-error-highlight: #f4c3cb;
 
   --color-placholder_gray: #d8d8d8;
   --color-wolf_gray: #c5c7d0;
-  --placeholder-color-with-opacity:  rgba(197, 199, 208, 0.1);
-  --color-wolf_gray-with-opacity:  rgba(197, 199, 208, 0.1);
+  --placeholder-color-with-opacity: rgba(197, 199, 208, 0.1);
+  --color-wolf_gray-with-opacity: rgba(197, 199, 208, 0.1);
   --color-mud_black: #323338;
   --color-jaco_gray: #9699a6;
   --color-black: #000000;
