--- a/src/content-colors.scss
+++ b/src/content-colors.scss
@@ -1,4 +1,6 @@
-:root {
+:root,
+.light-app-theme,
+.default-app-theme {
   // green grass
   --color-grass_green: #037f4c;
   --color-grass_green-hover: #116846;
@@ -153,22 +155,22 @@
   --color-orchid: #D974B0;
   --color-orchid-hover: #AE5D8D;
   --color-orchid-selected: #ECBAD7;
-  
+
   // Tan
   --color-tan: #AD967A;
   --color-tan-hover: #8A7862;
   --color-tan-selected: #D6CABC;
-  
+
   // Sky
   --color-sky: #A1E3F6;
   --color-sky-hover: #81B6C5;
   --color-sky-selected: #D0F1FA;
-  
+
   // Coffee
   --color-coffee: #BD816E;
   --color-coffee-hover: #976758;
   --color-coffee-selected: #DEC0B7;
-  
+
   // Royal
   --color-royal: #2B76E5;
   --color-royal-hover: #225EB7;
@@ -178,22 +180,22 @@
   --color-teal: #175A63;
   --color-teal-hover: #12484F;
   --color-teal-selected: #8BACB1;
-  
+
   // Lavender
   --color-lavender: #BDA8F9;
   --color-lavender-hover: #9786C7;
   --color-lavender-selected: #DED4FC;
-  
+
   // Steel
   --color-steel: #A9BEE8;
   --color-steel-hover: #8798BA;
   --color-steel-selected: #D4DFF4;
-  
+
   // Lilac
   --color-lilac: #9D99B9;
   --color-lilac-hover: #7E7A94;
   --color-lilac-selected: #CECCDC;
-  
+
   // Pecan
   --color-pecan: #563E3E;
   --color-pecan-hover: #453232;
