fix font weight h3

--- a/src/typography.scss
+++ b/src/typography.scss
@@ -47,7 +47,7 @@
   // Fonts
   --font-h1: var(--font-weight-bold) var(--font-size-h1)/var(--font-line-height-h1) var(--font-family);
   --font-h2: var(--font-weight-bold) var(--font-size-h2)/var(--font-line-height-h2) var(--font-family);
-  --font-h3: var(--font-weight-bold) var(--font-size-h3)/var(--font-line-height-h3) var(--font-family);
+  --font-h3: var(--font-weight-light) var(--font-size-h3)/var(--font-line-height-h3) var(--font-family);
   --font-h4: var(--font-weight-bold) var(--font-size-h4)/var(--font-line-height-h4) var(--font-family);
   --font-h5: var(--font-weight-bold) var(--font-size-h5)/var(--font-line-height-h5) var(--font-family);
   --font-general-label: var(--font-weight-normal) var(--font-size-general-label)/var(--font-line-height-general-label) var(--font-family);
