change default hebrew text font family

--- a/src/typography.scss
+++ b/src/typography.scss
@@ -42,7 +42,7 @@
   --font-weight-bold: 500;
 
   // Font family
-  --font-family: "Roboto", "Open Sans", "Noto Kufi Arabic", "Noto Sans JP", sans-serif;
+  --font-family: "Roboto", "Rubik", "Noto Kufi Arabic", "Noto Sans JP", sans-serif;
 
   // Fonts
   --font-h1: var(--font-weight-bold) var(--font-size-h1)/var(--font-line-height-h1) var(--font-family);
