--- a/src/Themes/dark-theme.scss
+++ b/src/Themes/dark-theme.scss
@@ -72,6 +72,7 @@
   --color-done-green: #33d391;
   --color-done-green-hover: #0f9b63;
   --color-done-green-selected: #0e7358;
+  --color-done-green-selected-with-opacity: #0e735899;
 
   // Bright Green
   --color-bright-green: #b0dc51;
@@ -107,6 +108,7 @@
   --color-sunset: #ff9191;
   --color-sunset-hover: #c26163;
   --color-sunset-selected: #8d4a58;
+  --color-sunset-selected-with-opacity: #8d4a5899;
 
   // Stuck red
   --color-stuck-red: #e8697d;
