--- a/src/Themes/hacker-theme.scss
+++ b/src/Themes/hacker-theme.scss
@@ -77,6 +77,7 @@ $primary_color: #fe78c6;
   --color-done-green: #33d391;
   --color-done-green-hover: #0f9b63;
   --color-done-green-selected: #096c43;
+  --color-done-green-selected-with-opacity: #096c4399;
 
   // Bright Green
   --color-bright-green: #b0dc51;
@@ -112,6 +113,7 @@ $primary_color: #fe78c6;
   --color-sunset: #ff9191;
   --color-sunset-hover: #c26163;
   --color-sunset-selected: #884343;
+  --color-sunset-selected-with-opacity: #88434399;
 
   // Stuck red
   --color-stuck-red: #e8697d;
