--- a/src/content-colors.scss
+++ b/src/content-colors.scss
@@ -10,6 +10,7 @@
   --color-done-green: #00c875;
   --color-done-green-hover: #0f9b63;
   --color-done-green-selected: #80e3ba;
+  --color-done-green-selected-with-opacity: #80e3ba99;
 
   // Bright Green
   --color-bright-green: #9cd326;
@@ -45,6 +46,7 @@
   --color-sunset: #ff7575;
   --color-sunset-hover: #c26163;
   --color-sunset-selected: #ffbaba;
+  --color-sunset-selected-with-opacity: #ffbaba99;
 
   // Stuck red
   --color-stuck-red: #e2445c;
