--- a/src/Themes/basic-theme.scss
+++ b/src/Themes/basic-theme.scss
@@ -36,8 +36,8 @@
   // borders
   --ui-border-color: var(--color-wolf_gray);
   --ui-border-on-secondary-color: var(--color-wolf_gray);
-  --layout-border-color: var(--color-ui_grey);
-  --layout-border-on-secondary-color: var(--color-ui_grey);
+  --layout-border-color: #d0d4e4;
+  --layout-border-on-secondary-color: #d0d4e4;
 
   --placeholder-color: var(--color-asphalt);
   --placeholder-color-with-opacity: var(--color-asphalt-with-opacity);
