--- a/src/Themes/black-theme.scss
+++ b/src/Themes/black-theme.scss
@@ -7,8 +7,8 @@
   --primary-selected-color: #133774;
   --primary-selected-color-rgb: 19, 55, 116;
   --primary-selected-on-secondary-color: #133774;
-  --primary-text-color: #ffffff;
-  --primary-text-on-secondary-color: #ffffff;
+  --primary-text-color: #eeeeee;
+  --primary-text-on-secondary-color: #eeeeee;
 
   --primary-background-color: #111111;
   --primary-background-color-rgb: 17, 17, 17;
@@ -17,7 +17,7 @@
   --primary-background-hover-on-secondary-color: #636363;
   --grey-background-color: #111111;
 
-  --inverted-color-background: #ffffff;
+  --inverted-color-background: #eeeeee;
   --text-color-on-inverted: #111111;
 
   // states
@@ -214,49 +214,49 @@
   --color-brown-selected: #48322c;
 
   // Orchid
-  --color-orchid: #E190C0;
-  --color-orchid-hover: #B4739A;
-  --color-orchid-selected: #7E516C;
-  
+  --color-orchid: #e190c0;
+  --color-orchid-hover: #b4739a;
+  --color-orchid-selected: #7e516c;
+
   // Tan
-  --color-tan: #BDAB95;
+  --color-tan: #bdab95;
   --color-tan-hover: #978977;
-  --color-tan-selected: #6A6053;
-  
+  --color-tan-selected: #6a6053;
+
   // Sky
-  --color-sky: #B4E9F8;
-  --color-sky-hover: #90BAC6;
-  --color-sky-selected: #65828B;
-  
+  --color-sky: #b4e9f8;
+  --color-sky-hover: #90bac6;
+  --color-sky-selected: #65828b;
+
   // Coffee
-  --color-coffee: #CA9A8B;
-  --color-coffee-hover: #A27B6F;
-  --color-coffee-selected: #71564E;
-  
+  --color-coffee: #ca9a8b;
+  --color-coffee-hover: #a27b6f;
+  --color-coffee-selected: #71564e;
+
   // Royal
-  --color-royal: #5591EA;
-  --color-royal-hover: #4474BB;
+  --color-royal: #5591ea;
+  --color-royal-hover: #4474bb;
   --color-royal-selected: #305183;
 
   // Teal
-  --color-teal: #457B82;
+  --color-teal: #457b82;
   --color-teal-hover: #376268;
   --color-teal-selected: #274549;
-  
+
   // Lavender
-  --color-lavender: #CAB9FA;
-  --color-lavender-hover: #A294C8;
-  --color-lavender-selected: #71688C;
-  
+  --color-lavender: #cab9fa;
+  --color-lavender-hover: #a294c8;
+  --color-lavender-selected: #71688c;
+
   // Steel
-  --color-steel: #BACBED;
-  --color-steel-hover: #95A2BE;
+  --color-steel: #bacbed;
+  --color-steel-hover: #95a2be;
   --color-steel-selected: #687185;
-  
+
   // Lilac
   --color-lilac: #687185;
-  --color-lilac-hover: #8E8A9F;
-  --color-lilac-selected: #63616F;
+  --color-lilac-hover: #8e8a9f;
+  --color-lilac-selected: #63616f;
 
   // Pecan
   --color-pecan: #786565;
