--- a/src/Themes/dark-theme.scss
+++ b/src/Themes/dark-theme.scss
@@ -88,6 +88,8 @@
   --color-egg_yolk: #ffd533;
   --color-egg_yolk-hover: #c29e11;
   --color-egg_yolk-selected: #8D751E;
+  --color-egg_yolk-with-opacity-6: rgba(255, 213, 51, 0.6);
+  --color-egg_yolk-with-opacity-25: rgba(255, 213, 51, 0.25);
 
   // Working on it
   --color-working_orange: #fdbc64;
