--- a/src/content-colors.scss
+++ b/src/content-colors.scss
@@ -26,6 +26,8 @@
   --color-egg_yolk: #ffcb00;
   --color-egg_yolk-hover: #c29e11;
   --color-egg_yolk-selected: #ffe580;
+  --color-egg_yolk-with-opacity-6: rgba(255, 213, 51, 0.6);
+  --color-egg_yolk-with-opacity-25: rgba(255, 213, 51, 0.25);
 
   // Working on it
   --color-working_orange: #fdab3d;
