add egg yolk rgb

--- a/src/Themes/hacker-theme.scss
+++ b/src/Themes/hacker-theme.scss
@@ -93,8 +93,7 @@ $primary_color: #fe78c6;
   --color-egg_yolk: #ffd533;
   --color-egg_yolk-hover: #c29e11;
   --color-egg_yolk-selected: #886e09;
-  --color-egg_yolk-with-opacity-6: rgba(255, 213, 51, 0.6);
-  --color-egg_yolk-with-opacity-25: rgba(255, 213, 51, 0.25);
+  --color-egg_yolk-rgb: 255, 213, 51;
 
   // Working on it
   --color-working_orange: #fdbc64;
