# Update Gray Color Keys * Update ``--core-wolf-gray`` value   * Update ``--color-wolf_gray-with-opacity`` with new ``--core-wolf-gray`` value * Update ``--color-riverstone_gray`` value * Update ``--color-ui_gray`` value

--- a/src/colors.scss
+++ b/src/colors.scss
@@ -20,9 +20,9 @@
   --color-error-highlight: #f4c3cb;
 
   --color-placholder_gray: #d8d8d8;
-  --color-wolf_gray: #c5c7d0;
   --placeholder-color-with-opacity: rgba(197, 199, 208, 0.1);
-  --color-wolf_gray-with-opacity: rgba(197, 199, 208, 0.1);
+  --color-wolf_gray: #c3c6d4;
+  --color-wolf_gray-with-opacity: rgba(195, 198, 212, 0.1);
   --color-mud_black: #323338;
   --color-jaco_gray: #9699a6;
   --color-black: #000000;
@@ -80,8 +80,8 @@
   --color-red_shadow: #e2445c;
   --color-green_shadow: #00c875;
   --color-storm_gray: #6b6d77;
-  --color-riverstone_gray: #f5f6f8;
-  --color-ui_grey: #e6e9ef;
+  --color-riverstone_gray: #f6f7fb;
+  --color-ui_grey: #dcdfec;
   --color-border_light_gray: #f5f6f8;
   --color-like_red: #fb275d;
   --color-lime-green: #9cd326;
