--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,4 @@
-@import "./animations.scss";
-@import "src/Themes/all.scss";
-@import "./border-radius.scss";
-@import "./colors.scss";
-@import "./content-colors.scss";
-@import "./shadows.scss";
-@import "./spacing.scss";
-@import "./typography.scss";
+//
+
+@import "core";
+@import "themes";
