* Add 'map-collect' function * Add 'settings' scope maps for Core and Basic Theme   * Settings use map-collect to gather scope maps   * Enable looping over one settings map per scope while keeping definition efforts within each scope. * Revise map keys to eliminate use of key prefixes while looping maps * Remove Black theme temp definitions

--- a/src/core/maps/_radius.scss
+++ b/src/core/maps/_radius.scss
@@ -1,5 +1,5 @@
 $core-radius: (
-        small: $border-radius-small,
-        medium: $border-radius-medium,
-        big: $border-radius-big,
+        border-small: $border-radius-small,
+        border-medium: $border-radius-medium,
+        border-big: $border-radius-big,
 );
