--- a/src/core/maps/_shadows.scss
+++ b/src/core/maps/_shadows.scss
@@ -8,5 +8,5 @@ $core-shadow-size: (
 
 $core-shadow-opacity: (
         opacity: $shadow-opacity,
-        lg-opacity: $shadow-lg-opacity,
+        lg-opacity: $shadow-large-opacity,
 );
