--- a/src/core/maps/_spacing.scss
+++ b/src/core/maps/_spacing.scss
@@ -1,11 +1,11 @@
 //
 
 $core-spacing: (
-        xs: $spacing-xs,
-        small:$spacing-small,
-        medium: $spacing-medium,
-        large: $spacing-large,
-        xl: $spacing-xl,
-        xxl: $spacing-xxl,
-        xxxl: $spacing-xxxl,
+        spacing-xs: $spacing-xs,
+        spacing-small:$spacing-small,
+        spacing-medium: $spacing-medium,
+        spacing-large: $spacing-large,
+        spacing-xl: $spacing-xl,
+        spacing-xxl: $spacing-xxl,
+        spacing-xxxl: $spacing-xxxl,
 );
