--- a/src/core/maps/_typography.scss
+++ b/src/core/maps/_typography.scss
@@ -1,33 +1,33 @@
 $core-typography-font-sizes: (
-        h1: $font-size-h1,
-        h2: $font-size-h2,
-        h3: $font-size-h3,
-        h4: $font-size-h4,
-        h5: $font-size-h5,
-        general-label: $font-size-general-label,
-        paragraph: $font-size-paragraph,
-        subtext: $font-size-subtext,
+        font-size-h1: $font-size-h1,
+        font-size-h2: $font-size-h2,
+        font-size-h3: $font-size-h3,
+        font-size-h4: $font-size-h4,
+        font-size-h5: $font-size-h5,
+        font-size-general-label: $font-size-general-label,
+        font-size-paragraph: $font-size-paragraph,
+        font-size-subtext: $font-size-subtext,
 );
 
 $core-typography-line-height-sizes: (
-        h1: $font-line-height-h1,
-        h2: $font-line-height-h2,
-        h3: $font-line-height-h3,
-        h4: $font-line-height-h4,
-        h5: $font-line-height-h5,
-        general-label: $font-line-height-general-label,
-        paragraph: $font-line-height-paragraph,
-        subtext: $font-line-height-subtext,
+        font-line-height-h1: $font-line-height-h1,
+        font-line-height-h2: $font-line-height-h2,
+        font-line-height-h3: $font-line-height-h3,
+        font-line-height-h4: $font-line-height-h4,
+        font-line-height-h5: $font-line-height-h5,
+        font-line-height-general-label: $font-line-height-general-label,
+        font-line-height-paragraph: $font-line-height-paragraph,
+        font-line-height-subtext: $font-line-height-subtext,
 );
 
 
 $core-typography-fonts: (
-        h1: $font-h1,
-        h2: $font-h2,
-        h3: $font-h3,
-        h4: $font-h4,
-        h5: $font-h5,
-        general-label: $font-general-label,
-        paragraph:$font-paragraph,
-        subtext: $font-subtext,
+        font-h1: $font-h1,
+        font-h2: $font-h2,
+        font-h3: $font-h3,
+        font-h4: $font-h4,
+        font-h5: $font-h5,
+        font-general-label: $font-general-label,
+        font-paragraph:$font-paragraph,
+        font-subtext: $font-subtext,
 );
