--- a/src/core/tokens/_shadows.scss
+++ b/src/core/tokens/_shadows.scss
@@ -5,4 +5,4 @@ $shadow-size-medium: 0px 6px 20px;
 $shadow-size-large: 0px 15px 50px;
 
 $shadow-opacity: 0.2;
-$shadow-lg-opacity: 0.3;
+$shadow-large-opacity: 0.3;
