--- a/src/themes/basic/maps/_keys.scss
+++ b/src/themes/basic/maps/_keys.scss
@@ -1,55 +1,55 @@
 //
 
 $theme-basic-keys: (
-        primary-color: $primary-color,
-        primary-on-secondary-color: $primary-on-secondary-color,
-        primary-hover-color: $primary-hover-color,
-        primary-hover-on-secondary-color:$primary-hover-on-secondary-color,
-        primary-selected-color: $primary-selected-color,
-        primary-selected-color-rgb: $primary-selected-color-rgb,
-        primary-selected-on-secondary-color: $primary-selected-on-secondary-color,
-        primary-text-color: $primary-text-color,
-        primary-text-on-secondary-color: $primary-text-on-secondary-color,
-        text-color-on-primary: $text-color-on-primary,
-        text-color-on-primary-with-opacity: $text-color-on-primary-with-opacity,
-        primary-background-color: $primary-background-color,
-        primary-background-color-rgb: $primary-background-color-rgb,
-        primary-background-hover-color: $primary-background-hover-color,
-        primary-background-hover-on-secondary-color: $primary-background-hover-on-secondary-color,
-        grey-background-color:$grey-background-color,
-        modal-background-color: $modal-background-color,
-        inverted-color-background: $inverted-color-background,
-        text-color-on-inverted: $text-color-on-inverted,
-        positive-color: $positive-color,
-        positive-color-hover: $positive-color-hover,
-        positive-color-selected: $positive-color-selected,
-        negative-color: $negative-color,
-        negative-color-hover: $negative-color-hover,
-        negative-color-selected: $negative-color-selected,
-        private-color: $private-color,
-        shareable-color: $shareable-color,
-        ui-border-color: $ui-border-color,
-        ui-border-on-secondary-color: $ui-border-on-secondary-color,
-        layout-border-color: $layout-border-color,
-        layout-border-on-secondary-color: $layout-border-on-secondary-color,
-        placeholder-color: $placeholder-color,
-        placeholder-color-with-opacity: $placeholder-color-with-opacity,
-        placeholder-on-secondary-color: $placeholder-on-secondary-color,
-        icon-color: $icon-color,
-        icon-on-secondary-color: $icon-on-secondary-color,
-        disabled-background-color: $disabled-background-color,
-        disabled-background-on-secondary-color: $disabled-background-on-secondary-color,
-        disabled-text-color: $disabled-text-color,
-        disabled-text-on-secondary-color:$disabled-text-on-secondary-color,
-        dark-background-color: $dark-background-color,
-        dark-background-on-secondary-color: $dark-background-on-secondary-color,
-        secondary-background-color:$secondary-background-color,
-        secondary-background-color-rgb: $secondary-background-color-rgb,
-        dialog-background-color: $dialog-background-color,
-        label-background-color: $label-background-color,
-        label-background-on-secondary-color: $label-background-on-secondary-color,
-        secondary-text-color: $secondary-text-color,
-        secondary-text-on-secondary-color:$secondary-text-on-secondary-color,
-        link-color: $link-color,
-        link-on-secondary-color: $link-on-secondary-color,
+        color-primary-color: $primary-color,
+        color-primary-on-secondary-color: $primary-on-secondary-color,
+        color-primary-hover-color: $primary-hover-color,
+        color-primary-hover-on-secondary-color:$primary-hover-on-secondary-color,
+        color-primary-selected-color: $primary-selected-color,
+        color-primary-selected-color-rgb: $primary-selected-color-rgb,
+        color-primary-selected-on-secondary-color: $primary-selected-on-secondary-color,
+        color-primary-text-color: $primary-text-color,
+        color-primary-text-on-secondary-color: $primary-text-on-secondary-color,
+        color-text-color-on-primary: $text-color-on-primary,
+        color-text-color-on-primary-with-opacity: $text-color-on-primary-with-opacity,
+        color-primary-background-color: $primary-background-color,
+        color-primary-background-color-rgb: $primary-background-color-rgb,
+        color-primary-background-hover-color: $primary-background-hover-color,
+        color-primary-background-hover-on-secondary-color: $primary-background-hover-on-secondary-color,
+        color-grey-background-color:$grey-background-color,
+        color-modal-background-color: $modal-background-color,
+        color-inverted-color-background: $inverted-color-background,
+        color-text-color-on-inverted: $text-color-on-inverted,
+        color-positive-color: $positive-color,
+        color-positive-color-hover: $positive-color-hover,
+        color-positive-color-selected: $positive-color-selected,
+        color-negative-color: $negative-color,
+        color-negative-color-hover: $negative-color-hover,
+        color-negative-color-selected: $negative-color-selected,
+        color-private-color: $private-color,
+        color-shareable-color: $shareable-color,
+        color-ui-border-color: $ui-border-color,
+        color-ui-border-on-secondary-color: $ui-border-on-secondary-color,
+        color-layout-border-color: $layout-border-color,
+        color-layout-border-on-secondary-color: $layout-border-on-secondary-color,
+        color-placeholder-color: $placeholder-color,
+        color-placeholder-color-with-opacity: $placeholder-color-with-opacity,
+        color-placeholder-on-secondary-color: $placeholder-on-secondary-color,
+        color-icon-color: $icon-color,
+        color-icon-on-secondary-color: $icon-on-secondary-color,
+        color-disabled-background-color: $disabled-background-color,
+        color-disabled-background-on-secondary-color: $disabled-background-on-secondary-color,
+        color-disabled-text-color: $disabled-text-color,
+        color-disabled-text-on-secondary-color:$disabled-text-on-secondary-color,
+        color-dark-background-color: $dark-background-color,
+        color-dark-background-on-secondary-color: $dark-background-on-secondary-color,
+        color-secondary-background-color:$secondary-background-color,
+        color-secondary-background-color-rgb: $secondary-background-color-rgb,
+        color-dialog-background-color: $dialog-background-color,
+        color-label-background-color: $label-background-color,
+        color-label-background-on-secondary-color: $label-background-on-secondary-color,
+        color-secondary-text-color: $secondary-text-color,
+        color-secondary-text-on-secondary-color:$secondary-text-on-secondary-color,
+        color-link-color: $link-color,
+        color-link-on-secondary-color: $link-on-secondary-color,
 );
