--- a/src/core/maps/_fonts.scss
+++ b/src/core/maps/_fonts.scss
@@ -1,30 +1,30 @@
 $core-fonts: (
-        family:$font-family,
-        smoothing-webkit:$font-smoothing-webkit,
+        font-family:$font-family,
+        font-smoothing-webkit:$font-smoothing-webkit,
         font-smoothing-moz:$font-smoothing-moz,
 );
 
 $core-font-weight: (
-        very-light:$font-weight-very-light,
-        light:$font-weight-light,
-        normal:$font-weight-normal,
-        bold: $font-weight-bold
+        font-weight-very-light:$font-weight-very-light,
+        font-weight-light:$font-weight-light,
+        font-weight-normal:$font-weight-normal,
+        font-weight-bold: $font-weight-bold
 );
 
 $core-font-size-scale: (
-        "10":$font-size-10,
-        "20":$font-size-20,
-        "30":$font-size-30,
-        "40":$font-size-40,
-        "50":$font-size-50,
-        "60":$font-size-60,
+        font-size-10:$font-size-10,
+        font-size-20:$font-size-20,
+        font-size-30:$font-size-30,
+        font-size-40:$font-size-40,
+        font-size-50:$font-size-50,
+        font-size-60:$font-size-60,
 );
 
 $core-line-height-scale: (
-        "10":$font-line-height-10,
-        "20":$font-line-height-20,
-        "30":$font-line-height-30,
-        "40":$font-line-height-40,
-        "50":$font-line-height-50,
-        "60":$font-line-height-60,
+        font-line-height-10:$font-line-height-10,
+        font-line-height-20:$font-line-height-20,
+        font-line-height-30:$font-line-height-30,
+        font-line-height-40:$font-line-height-40,
+        font-line-height-50:$font-line-height-50,
+        font-line-height-60:$font-line-height-60,
 )
