--- a/src/themes/_theme-basic.scss
+++ b/src/themes/_theme-basic.scss
@@ -2,28 +2,11 @@
 
 @import "basic/theme-basic-tokens";
 @import "basic/theme-basic-maps";
+@import "basic/theme-basic-settings";
 
-:root,
 .light-app-theme,
 .default-app-theme {
-  // Color variables
-  // - Creating Base colors variables
-  @each $key, $value in $theme-basic-colors {
-    --color-#{$key}: #{$value};
-  }
-
-  // - Creating Content colors variables
-  @each $key, $value in $theme-basic-content-colors {
-    --color-#{$key}: #{$value};
-  }
-
-  // - Creating Keys Semantic variables
-  @each $key, $value in $theme-basic-keys {
+  @each $key, $value in $theme-basic-settings {
     --#{$key}: #{$value};
-  }
-
-  // - Creating Box Shadow variables
-  @each $key, $value in $theme-basic-shadows {
-    --box-shadow-#{$key}: #{$value};
   }
 }
