--- a/src/themes/basic/maps/_colors.scss
+++ b/src/themes/basic/maps/_colors.scss
@@ -1,97 +1,95 @@
 //
 
 $theme-basic-colors: (
-        asphalt: $color-asphalt,
-        asphalt-with-opacity:$color-asphalt-with-opacity,
-        light_blue: $color-light_blue,
-        basic_blue: $color-basic_blue,
-        basic_light_blue: $color-basic_light_blue,
-        dark_blue: $color-dark_blue,
-        link_color: $color-link_color,
-        snow_white: $color-snow_white,
-        snow_white-with-opacity: $color-snow_white-with-opacity,
-        succes: $color-success,
-        success-hover:$color-success-hover,
-        success-highlight:$color-success-highlight,
-        error: $color-error,
-        error-hover: $color-error-hover,
-        error-highlight: $color-error-highlight,
-        placholder_gray: $color-placholder_gray,
-        wolf_gray: $color-wolf_gray,
-        mud_black: $color-mud_black,
-        jaco_gray: $color-jaco_gray,
-        black: $color-black,
-        blue_links: $color-blue_links,
-        bazooka: $color-bazooka,
-        dark_marble: $color-dark_marble,
-        marble: $color-marble,
-        gainsboro: $color-gainsboro,
-        jeans: $color-jeans,
-        aqua: $color-aqua,
-        highlight_blue: $color-highlight_blue,
-        highlight_blue-rgb: $color-highlight_blue-rgb,
-        pulse_text_color: $color-pulse_text_color,
-        highlight: $color-highlight,
-        placeholder_light_gray: $color-placeholder_light_gray,
-        scrollbar_gray: $color-scrollbar_gray,
-        timeline_grid_blue: $color-timeline_grid_blue,
-        timeline_blue: $color-timeline_blue,
-        default_group_color:$color-default_group_color,
-        very_light_gray:$color-very_light_gray,
-        pulse_bg: $color-pulse_bg,
-        jade: $color-jade,
-        deadline_upcoming_indication: $color-deadline_upcoming_indication,
-        form_purple: $color-form_purple,
-        form_btn_hover: $color-form_btn_hover,
-        board_views_grey: $color-board_views_grey,
-        board_views_blue: $color-board_views_blue,
-        board_views_grey_hover: $color-board_views_grey_hover,
-        board_views_blue_secondary: $color-board_views_blue_secondary,
-        brand-blue: $color-brand-blue,
-        brand-charcoal: $color-brand-charcoal,
-        brand-gold: $color-brand-gold,
-        brand-green: $color-brand-green,
-        brand-iris: $color-brand-iris,
-        brand-light-blue: $color-brand-light-blue,
-        brand-malachite: $color-brand-malachite,
-        brand-purple: $color-brand-purple,
-        brand-red: $color-brand-red,
-        public: $color-public,
-        private: $color-private,
-        word-blue: $color-word-blue,
-        ppt-orange: $color-ppt-orange,
-        excel-green: $color-excel-green,
-        pdf-red: $color-pdf-red,
-        zip-orange: $color-zip-orange,
-        media-blue: $color-media-blue,
-        surface: $color-surface,
-        burned_eggplant: $color-burned_eggplant,
-        live_blue: $color-live_blue,
-        extra_light_gray: $color-extra_light_gray,
-        glitter: $color-glitter,
-        ultra_light_gray: $color-ultra_light_gray,
-        red_shadow: $color-red_shadow,
-        green_shadow: $color-green_shadow,
-        storm_gray:$color-storm_gray,
-        riverstone_gray: $color-riverstone_gray,
-        ui_grey: $color-ui_grey,
-        border_light_gray: $color-border_light_gray,
-        like_red: $color-like_red,
-        lime-green: $color-lime-green,
-        mustered: $color-mustered,
-        dark_red: $color-dark_red,
-        trolley-grey: $color-trolley-grey,
-        dark-purple: $color-dark-purple,
-        dark-pink: $color-dark-pink,
-        turquoise: $color-turquoise,
-        light-pink: $color-light-pink,
-        red-shadow: $color-red-shadow,
-        orange: $color-orange,
-        yellow: $color-yellow,
-        green-shadow: $color-green-shadow,
-        blue-links: $color-blue-links,
-        amethyst: $color-amethyst,
-        green-haze: $color-green-haze
+        color-asphalt: $color-asphalt,
+        color-asphalt-with-opacity:$color-asphalt-with-opacity,
+        color-light_blue: $color-light_blue,
+        color-basic_blue: $color-basic_blue,
+        color-basic_light_blue: $color-basic_light_blue,
+        color-dark_blue: $color-dark_blue,
+        color-link_color: $color-link_color,
+        color-snow_white: $color-snow_white,
+        color-snow_white-with-opacity: $color-snow_white-with-opacity,
+        color-succes: $color-success,
+        color-success-hover:$color-success-hover,
+        color-success-highlight:$color-success-highlight,
+        color-error: $color-error,
+        color-error-hover: $color-error-hover,
+        color-error-highlight: $color-error-highlight,
+        color-placholder_gray: $color-placholder_gray,
+        color-wolf_gray: $color-wolf_gray,
+        color-mud_black: $color-mud_black,
+        color-jaco_gray: $color-jaco_gray,
+        color-black: $color-black,
+        color-blue_links: $color-blue_links,
+        color-bazooka: $color-bazooka,
+        color-dark_marble: $color-dark_marble,
+        color-marble: $color-marble,
+        color-gainsboro: $color-gainsboro,
+        color-jeans: $color-jeans,
+        color-aqua: $color-aqua,
+        color-highlight_blue: $color-highlight_blue,
+        color-highlight_blue-rgb: $color-highlight_blue-rgb,
+        color-pulse_text_color: $color-pulse_text_color,
+        color-highlight: $color-highlight,
+        color-placeholder_light_gray: $color-placeholder_light_gray,
+        color-scrollbar_gray: $color-scrollbar_gray,
+        color-timeline_grid_blue: $color-timeline_grid_blue,
+        color-timeline_blue: $color-timeline_blue,
+        color-default_group_color:$color-default_group_color,
+        color-very_light_gray:$color-very_light_gray,
+        color-pulse_bg: $color-pulse_bg,
+        color-jade: $color-jade,
+        color-deadline_upcoming_indication: $color-deadline_upcoming_indication,
+        color-form_purple: $color-form_purple,
+        color-form_btn_hover: $color-form_btn_hover,
+        color-board_views_grey: $color-board_views_grey,
+        color-board_views_blue: $color-board_views_blue,
+        color-board_views_grey_hover: $color-board_views_grey_hover,
+        color-board_views_blue_secondary: $color-board_views_blue_secondary,
+        color-brand-blue: $color-brand-blue,
+        color-brand-charcoal: $color-brand-charcoal,
+        color-brand-gold: $color-brand-gold,
+        color-brand-green: $color-brand-green,
+        color-brand-iris: $color-brand-iris,
+        color-brand-light-blue: $color-brand-light-blue,
+        color-brand-malachite: $color-brand-malachite,
+        color-brand-purple: $color-brand-purple,
+        color-brand-red: $color-brand-red,
+        color-public: $color-public,
+        color-private: $color-private,
+        color-word-blue: $color-word-blue,
+        color-ppt-orange: $color-ppt-orange,
+        color-excel-green: $color-excel-green,
+        color-pdf-red: $color-pdf-red,
+        color-zip-orange: $color-zip-orange,
+        color-media-blue: $color-media-blue,
+        color-surface: $color-surface,
+        color-burned_eggplant: $color-burned_eggplant,
+        color-live_blue: $color-live_blue,
+        color-extra_light_gray: $color-extra_light_gray,
+        color-glitter: $color-glitter,
+        color-ultra_light_gray: $color-ultra_light_gray,
+        color-red_shadow: $color-red_shadow,
+        color-green_shadow: $color-green_shadow,
+        color-storm_gray:$color-storm_gray,
+        color-riverstone_gray: $color-riverstone_gray,
+        color-ui_grey: $color-ui_grey,
+        color-border_light_gray: $color-border_light_gray,
+        color-like_red: $color-like_red,
+        color-lime-green: $color-lime-green,
+        color-mustered: $color-mustered,
+        color-dark_red: $color-dark_red,
+        color-trolley-grey: $color-trolley-grey,
+        color-dark-purple: $color-dark-purple,
+        color-dark-pink: $color-dark-pink,
+        color-turquoise: $color-turquoise,
+        color-light-pink: $color-light-pink,
+        color-red-shadow: $color-red-shadow,
+        color-orange: $color-orange,
+        color-yellow: $color-yellow,
+        color-green-shadow: $color-green-shadow,
+        color-blue-links: $color-blue-links,
+        color-amethyst: $color-amethyst,
+        color-green-haze: $color-green-haze
 );
-
-$theme-basic-legacy-colors:();
