--- a/src/themes/basic/maps/_content.scss
+++ b/src/themes/basic/maps/_content.scss
@@ -1,127 +1,127 @@
 //
 
 $theme-basic-content-colors: (
-        grass_green: $color-grass_green,
-        grass_green-hover: $color-grass_green-hover,
-        grass_green-selected: $color-grass_green-selected,
-        done-green: $color-done-green,
-        done-green-hover: $color-done-green-hover,
-        done-green-selected:$color-done-green-selected,
-        done-green-selected-with-opacity: $color-done-green-selected-with-opacity,
-        bright-green: $color-bright-green,
-        bright-green-hover: $color-bright-green-hover,
-        bright-green-selected: $color-bright-green-selected,
-        saladish: $color-saladish,
-        saladish-hover: $color-saladish-hover,
-        saladish-selected: $color-saladish-selected,
-        egg_yolk: $color-egg_yolk,
-        egg_yolk-hover: $color-egg_yolk-hover,
-        egg_yolk-selected: $color-egg_yolk-selected,
-        egg_yolk-rgb: $color-egg_yolk-rgb,
-        working_orange: $color-working_orange,
-        working_orange-hover: $color-working_orange-hover,
-        working_orange-selected: $color-working_orange-selected,
-        dark-orange: $color-dark-orange,
-        dark-orange-hover: $color-dark-orange-hover,
-        dark-orange-selected: $color-dark-orange-selected,
-        peach: $color-peach,
-        peach-hover: $color-peach-hover,
-        peach-selected: $color-peach-selected,
-        sunset: $color-sunset,
-        sunset-hover: $color-sunset-hover,
-        sunset-selected: $color-sunset-selected,
-        sunset-selected-with-opacity: $color-sunset-selected-with-opacity,
-        stuck-red: $color-stuck-red,
-        stuck-red-hover: $color-stuck-red-hover,
-        stuck-red-selected: $color-stuck-red-selected,
-        dark-red: $color-dark-red,
-        dark-red-hover: $color-dark-red-hover,
-        dark-red-selected: $color-dark-red-selected,
-        sofia_pink: $color-sofia_pink,
-        sofia_pink-hover: $color-sofia_pink-hover,
-        sofia_pink-selected: $color-sofia_pink-selected,
-        lipstick: $color-lipstick,
-        lipstick-hover: $color-lipstick-hover,
-        lipstick-selected: $color-lipstick-selected,
-        bubble: $color-bubble,
-        bubble-hover: $color-bubble-hover,
-        bubble-selected: $color-bubble-selected,
-        purple: $color-purple,
-        purple-hover: $color-purple-hover,
-        purple-selected: $color-purple-selected,
-        dark_purple: $color-dark_purple,
-        dark_purple-hover: $color-dark_purple-hover,
-        dark_purple-selected: $color-dark_purple-selected,
-        berry: $color-berry,
-        berry-hover: $color-berry-hover,
-        berry-selected: $color-berry-selected,
-        dark_indigo: $color-dark_indigo,
-        dark_indigo-hover: $color-dark_indigo-hover,
-        dark_indigo-selected: $color-dark_indigo-selected,
-        indigo: $color-indigo,
-        indigo-hover: $color-indigo-hover,
-        indigo-selected: $color-indigo-selected,
-        navy: $color-navy,
-        navy-hover: $color-navy-hover,
-        navy-selected: $color-navy-selected,
-        bright-blue: $color-bright-blue,
-        bright-blue-hover: $color-bright-blue-hover,
-        bright-blue-selected: $color-bright-blue-selected,
-        dark-blue: $color-dark-blue,
-        dark-blue-hover: $color-dark-blue-hover,
-        dark-blue-selected: $color-dark-blue-selected,
-        aquamarine: $color-aquamarine,
-        aquamarine-hover: $color-aquamarine-hover,
-        aquamarine-selected: $color-aquamarine-selected,
-        chili-blue: $color-chili-blue,
-        chili-blue-hover: $color-chili-blue-hover,
-        chili-blue-selected: $color-chili-blue-selected,
-        river: $color-river,
-        river-hover: $color-river-hover,
-        river-selected: $color-river-selected,
-        winter: $color-winter,
-        winter-hover: $color-winter-hover,
-        winter-selected: $color-winter-selected,
-        explosive: $color-explosive,
-        explosive-hover: $color-explosive-hover,
-        explosive-selected: $color-explosive-selected,
-        american_gray: $color-american_gray,
-        american_gray-hover: $color-american_gray-hover,
-        american_gray-selected: $color-american_gray-selected,
-        blackish: $color-blackish,
-        blackish-hover: $color-blackish-hover,
-        blackish-selected: $color-blackish-selected,
-        brown: $color-brown,
-        brown-hover: $color-brown-hover,
-        brown-selected: $color-brown-selected,
-        orchid: $color-orchid,
-        orchid-hover: $color-orchid-hover,
-        orchid-selected: $color-orchid-selected,
-        tan: $color-tan,
-        tan-hover: $color-tan-hover,
-        tan-selected: $color-royal-selected,
-        sky: $color-sky,
-        sky-hover: $color-sky-hover,
-        sky-selected: $color-sky-selected,
-        coffee: $color-coffee,
-        coffee-hover: $color-coffee-hover,
-        coffee-selected: $color-coffee-selected,
-        royal: $color-royal,
-        royal-hover: $color-royal-hover,
-        royal-selected: $color-royal-selected,
-        teal: $color-teal,
-        teal-hover: $color-teal-hover,
-        teal-selected: $color-teal-selected,
-        lavender: $color-lavender,
-        lavender-hover: $color-lavender-hover,
-        lavender-selected: $color-lavender-selected,
-        steel: $color-steel,
-        steel-hover: $color-steel-hover,
-        steel-selected: $color-steel-selected,
-        lilac: $color-lilac,
-        lilac-hover:$color-lilac-hover,
-        lilac-selected: $color-lilac-selected,
-        pecan: $color-pecan,
-        pecan-hover: $color-pecan-hover,
-        pecan-selected: $color-pecan-selected,
+        color-grass_green: $color-grass_green,
+        color-grass_green-hover: $color-grass_green-hover,
+        color-grass_green-selected: $color-grass_green-selected,
+        color-done-green: $color-done-green,
+        color-done-green-hover: $color-done-green-hover,
+        color-done-green-selected:$color-done-green-selected,
+        color-done-green-selected-with-opacity: $color-done-green-selected-with-opacity,
+        color-bright-green: $color-bright-green,
+        color-bright-green-hover: $color-bright-green-hover,
+        color-bright-green-selected: $color-bright-green-selected,
+        color-saladish: $color-saladish,
+        color-saladish-hover: $color-saladish-hover,
+        color-saladish-selected: $color-saladish-selected,
+        color-egg_yolk: $color-egg_yolk,
+        color-egg_yolk-hover: $color-egg_yolk-hover,
+        color-egg_yolk-selected: $color-egg_yolk-selected,
+        color-egg_yolk-rgb: $color-egg_yolk-rgb,
+        color-working_orange: $color-working_orange,
+        color-working_orange-hover: $color-working_orange-hover,
+        color-working_orange-selected: $color-working_orange-selected,
+        color-dark-orange: $color-dark-orange,
+        color-dark-orange-hover: $color-dark-orange-hover,
+        color-dark-orange-selected: $color-dark-orange-selected,
+        color-peach: $color-peach,
+        color-peach-hover: $color-peach-hover,
+        color-peach-selected: $color-peach-selected,
+        color-sunset: $color-sunset,
+        color-sunset-hover: $color-sunset-hover,
+        color-sunset-selected: $color-sunset-selected,
+        color-sunset-selected-with-opacity: $color-sunset-selected-with-opacity,
+        color-stuck-red: $color-stuck-red,
+        color-stuck-red-hover: $color-stuck-red-hover,
+        color-stuck-red-selected: $color-stuck-red-selected,
+        color-dark-red: $color-dark-red,
+        color-dark-red-hover: $color-dark-red-hover,
+        color-dark-red-selected: $color-dark-red-selected,
+        color-sofia_pink: $color-sofia_pink,
+        color-sofia_pink-hover: $color-sofia_pink-hover,
+        color-sofia_pink-selected: $color-sofia_pink-selected,
+        color-lipstick: $color-lipstick,
+        color-lipstick-hover: $color-lipstick-hover,
+        color-lipstick-selected: $color-lipstick-selected,
+        color-bubble: $color-bubble,
+        color-bubble-hover: $color-bubble-hover,
+        color-bubble-selected: $color-bubble-selected,
+        color-purple: $color-purple,
+        color-purple-hover: $color-purple-hover,
+        color-purple-selected: $color-purple-selected,
+        color-dark_purple: $color-dark_purple,
+        color-dark_purple-hover: $color-dark_purple-hover,
+        color-dark_purple-selected: $color-dark_purple-selected,
+        color-berry: $color-berry,
+        color-berry-hover: $color-berry-hover,
+        color-berry-selected: $color-berry-selected,
+        color-dark_indigo: $color-dark_indigo,
+        color-dark_indigo-hover: $color-dark_indigo-hover,
+        color-dark_indigo-selected: $color-dark_indigo-selected,
+        color-indigo: $color-indigo,
+        color-indigo-hover: $color-indigo-hover,
+        color-indigo-selected: $color-indigo-selected,
+        color-navy: $color-navy,
+        color-navy-hover: $color-navy-hover,
+        color-navy-selected: $color-navy-selected,
+        color-bright-blue: $color-bright-blue,
+        color-bright-blue-hover: $color-bright-blue-hover,
+        color-bright-blue-selected: $color-bright-blue-selected,
+        color-dark-blue: $color-dark-blue,
+        color-dark-blue-hover: $color-dark-blue-hover,
+        color-dark-blue-selected: $color-dark-blue-selected,
+        color-aquamarine: $color-aquamarine,
+        color-aquamarine-hover: $color-aquamarine-hover,
+        color-aquamarine-selected: $color-aquamarine-selected,
+        color-chili-blue: $color-chili-blue,
+        color-chili-blue-hover: $color-chili-blue-hover,
+        color-chili-blue-selected: $color-chili-blue-selected,
+        color-river: $color-river,
+        color-river-hover: $color-river-hover,
+        color-river-selected: $color-river-selected,
+        color-winter: $color-winter,
+        color-winter-hover: $color-winter-hover,
+        color-winter-selected: $color-winter-selected,
+        color-explosive: $color-explosive,
+        color-explosive-hover: $color-explosive-hover,
+        color-explosive-selected: $color-explosive-selected,
+        color-american_gray: $color-american_gray,
+        color-american_gray-hover: $color-american_gray-hover,
+        color-american_gray-selected: $color-american_gray-selected,
+        color-blackish: $color-blackish,
+        color-blackish-hover: $color-blackish-hover,
+        color-blackish-selected: $color-blackish-selected,
+        color-brown: $color-brown,
+        color-brown-hover: $color-brown-hover,
+        color-brown-selected: $color-brown-selected,
+        color-orchid: $color-orchid,
+        color-orchid-hover: $color-orchid-hover,
+        color-orchid-selected: $color-orchid-selected,
+        color-tan: $color-tan,
+        color-tan-hover: $color-tan-hover,
+        color-tan-selected: $color-royal-selected,
+        color-sky: $color-sky,
+        color-sky-hover: $color-sky-hover,
+        color-sky-selected: $color-sky-selected,
+        color-coffee: $color-coffee,
+        color-coffee-hover: $color-coffee-hover,
+        color-coffee-selected: $color-coffee-selected,
+        color-royal: $color-royal,
+        color-royal-hover: $color-royal-hover,
+        color-royal-selected: $color-royal-selected,
+        color-teal: $color-teal,
+        color-teal-hover: $color-teal-hover,
+        color-teal-selected: $color-teal-selected,
+        color-lavender: $color-lavender,
+        color-lavender-hover: $color-lavender-hover,
+        color-lavender-selected: $color-lavender-selected,
+        color-steel: $color-steel,
+        color-steel-hover: $color-steel-hover,
+        color-steel-selected: $color-steel-selected,
+        color-lilac: $color-lilac,
+        color-lilac-hover:$color-lilac-hover,
+        color-lilac-selected: $color-lilac-selected,
+        color-pecan: $color-pecan,
+        color-pecan-hover: $color-pecan-hover,
+        color-pecan-selected: $color-pecan-selected,
 );
