# Refactor Tokens: Add Comment within Core and THEME BASIC Scopes. * Clean up and comment Core scope partials. * Clean up and comment Theme Basic scope partials.

--- a/src/_core.scss
+++ b/src/_core.scss
@@ -1,4 +1,6 @@
-//
+// CORE: This partial loads Core scope related Custom properties
+// - Core properties are Global and Generic and goes under :root
+
 @import "core/tokens";
 @import "core/maps";
 @import "core/settings";
