--- a/src/_themes.scss
+++ b/src/_themes.scss
@@ -1,3 +1,9 @@
-//
+// THEMES
+// This partial loads theme partials
+// - Themes are:
+//   - Basic
+//   - Black
+//   - Dark
+//   - Hacker
 
 @import "themes/theme-basic";
