--- a/src/core/_maps.scss
+++ b/src/core/_maps.scss
@@ -1,6 +1,7 @@
-// # Tokens Maps Loader
+// CORE Maps: This partial loads Core scope Maps
 // - Each map contains a token scope
-// - Maps are assigned with 'tokens' from the 'tokens' folder
+// - Maps are assigned with 'tokens' from the 'tokens' Scope
+
 @import "maps/fonts";
 @import "maps/motion";
 @import "maps/radius";
