--- a/src/core/maps/_fonts.scss
+++ b/src/core/maps/_fonts.scss
@@ -1,3 +1,7 @@
+// CORE FONT MAPS: This partial defines font-related maps.
+// - Maps include Font scope tokens.
+// - Maps are collected into the $core-settings map and are interpolated into custom properties.
+
 $core-fonts: (
         font-family:$font-family,
         font-smoothing-webkit:$font-smoothing-webkit,
