--- a/src/themes/_theme-basic.scss
+++ b/src/themes/_theme-basic.scss
@@ -1,4 +1,5 @@
-//
+// THEM BASIC: This partial loads Theme Basic scope related Custom properties
+// - Properties are Theme Specific and goes under a Theme Specific Class based Selectors.
 
 @import "basic/theme-basic-tokens";
 @import "basic/theme-basic-maps";
