--- a/src/themes/basic/_theme-basic-maps.scss
+++ b/src/themes/basic/_theme-basic-maps.scss
@@ -1,4 +1,6 @@
-//
+// THEME BASIC Maps: This partial loads THEME BASIC scope Maps
+// - Each map contains a token scope
+// - Maps are assigned with 'tokens' from the 'tokens' Scope
 
 @import "maps/colors";
 @import "maps/legacy-colors";
