--- a/src/themes/basic/tokens/colors/_base.scss
+++ b/src/themes/basic/tokens/colors/_base.scss
@@ -1,4 +1,5 @@
-//
+// THEME BASIC TOKENS: BASE COLORS
+// - This partial defines Basic Theme's base color tokens
 
 $color-asphalt: #676879;
 $color-asphalt-with-opacity: rgba($color-asphalt, 0.1);
