--- a/src/themes/basic/tokens/colors/_content.scss
+++ b/src/themes/basic/tokens/colors/_content.scss
@@ -1,4 +1,5 @@
-//
+// THEME BASIC TOKENS: CONTENT COLORS
+// - This partial defines Basic Theme's content color tokens
 
 // green grass
 $color-grass_green: #037f4c;
