--- a/src/core/maps/_motion.scss
+++ b/src/core/maps/_motion.scss
@@ -1,3 +1,7 @@
+// CORE MOTION MAP: This partial defines a motion related map.
+// - Map include Motion scope tokens.
+// - Map is collected into the $core-settings map and is interpolated into custom properties.
+
 $core-motion: (
         expand-animation-timing:$expand-animation-timing,
 );
