--- a/src/core/tokens/_shadows.scss
+++ b/src/core/tokens/_shadows.scss
@@ -1,4 +1,5 @@
-//
+// CORE TOKENS: SHADOWS
+// - This partial defines global shadow related tokens
 
 $shadow-size-small: 0px 4px 8px;
 $shadow-size-medium: 0px 6px 20px;
