--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,11 @@
-//
+// MONDAY VIBE DESIGN SYSTEM : DESIGN TOKENS
+// - This partial Imports all of VIBE's Token scope.
+// - It include:
+//   - global functions.
+//   - Core Tokens  and Core Maps.
+//   - Theme based Tokens and maps.
+// - Custom properties are generated per each scope from a unified scope related settings map.
+// - CSS Output is custom properties definitions for global :root and themes scopes.
 
 @import "functions";
 @import "core";
