--- a/src/themes/basic/maps/_legacy-colors.scss
+++ b/src/themes/basic/maps/_legacy-colors.scss
@@ -1,5 +1,8 @@
-//
+// BASIC THEME LEGACY COLOR MAP: This partial defines the basic theme's legacy color map.
+// - Map include legacy color scope tokens.
+// - Its main Purpose is to cleanup non "VIBE" tokens from the Registration map ($theme-basic-colors).
+// - Map is collected into the $theme-basic-settings map and is interpolated into custom properties.
 
 $theme-basic-legacy-colors:(
-
+  // Placeholder
 );
