--- a/src/themes/basic/maps/_shadows.scss
+++ b/src/themes/basic/maps/_shadows.scss
@@ -1,7 +1,10 @@
-//
+// BASIC THEME SHADOW MAP: This partial defines the basic theme's shadow color map.
+// - Map include shadow scope tokens.
+// - Map is collected into the $theme-basic-settings map and is interpolated into custom properties.
+
 $theme-basic-shadows: (
-        small: $shadow-size-small rgba($shadow-color, $shadow-opacity),
-        medium: $shadow-size-medium rgba($shadow-color, $shadow-opacity),
-        large: $shadow-size-large rgba($shadow-color, $shadow-large-opacity),
-        mediun: 0px 6px 20px rgba(0, 0, 0, 0.2),
+        box-shadow-small: $box-shadow-small,
+        box-shadow-medium: $box-shadow-medium,
+        box-shadow-large: $box-shadow-large,
+        box-shadow-mediun: $box-shadow-mediun,
 );
