--- a/src/themes/basic/tokens/_colors.scss
+++ b/src/themes/basic/tokens/_colors.scss
@@ -1,4 +1,5 @@
-//
+// THEME BASIC TOKENS: COLOR SCOPE LOADER
+// - This partial imports Basic Theme's color tokens
 
 @import "colors/base";
 @import "colors/content";
