--- a/src/themes/basic/tokens/colors/_keys.scss
+++ b/src/themes/basic/tokens/colors/_keys.scss
@@ -1,3 +1,6 @@
+// THEME BASIC TOKENS: SEMANTIC KEYS COLORS
+// - This partial defines Basic Theme's Semantic Keys color tokens
+
 // primary coloring
 $primary-color: var(--color-basic_blue);
 $primary-on-secondary-color: var(--color-basic_blue);
@@ -52,6 +55,7 @@ $dark-background-color: var(--color-riverstone_gray);
 $dark-background-on-secondary-color: var(--color-riverstone_gray);
 $secondary-background-color: var(--color-snow_white);
 $secondary-background-color-rgb: 255, 255, 255;
+
 //deprecated - use secondary-background-color
 $dialog-background-color: var(--color-snow_white);
 
