--- a/src/themes/basic/tokens/styles/_shadows.scss
+++ b/src/themes/basic/tokens/styles/_shadows.scss
@@ -1,3 +1,6 @@
+// THEME BASIC TOKENS: SHADOWS
+// - This partial defines Basic Theme's shadow tokens
+
 $box-shadow-color: #000000;
 
 $box-shadow-small: $shadow-size-small rgba($box-shadow-color, $shadow-opacity);
