# Refactor Tokens: Complete Core and Basic Scope * Fix sass parsing error with similar tokens. (color-green_shadow : color-green-shadow) * Namespace content tokens. * Separate legacy and legacy keys from colors * Separate Fonts from Typography * Add "extract-rgb" function * Add "generate-custom-properties" Mixin and implement in core and basic theme. * Perform Sanity on core and basic theme.

--- a/src/_core.scss
+++ b/src/_core.scss
@@ -6,9 +6,5 @@
 @import "core/settings";
 
 :root {
-  // Creating Core Font Variables
-  // - general font definitions
-  @each $key, $value in $core-settings {
-    --#{$key}: #{$value};
-  }
+  @include generate-custom-properties($core-settings);
 }
