--- a/src/themes/basic/_theme-basic-tokens.scss
+++ b/src/themes/basic/_theme-basic-tokens.scss
@@ -1,4 +1,4 @@
-// THEME BASIC TOKENS: This partial loads Theme Basic scope tokens.
+// BASIC THEME TOKENS: This partial loads BASIC THEME scope tokens.
 
 @import "tokens/colors";
 @import "tokens/styles";
