--- a/src/themes/basic/tokens/_colors.scss
+++ b/src/themes/basic/tokens/_colors.scss
@@ -3,4 +3,6 @@
 
 @import "colors/base";
 @import "colors/content";
+@import "colors/legacy";
+@import "colors/legacy-keys";
 @import "colors/keys";
