--- a/src/themes/black/_theme-black-maps.scss
+++ b/src/themes/black/_theme-black-maps.scss
@@ -1,10 +1,9 @@
-// BASIC THEME Maps: This partial loads BASIC THEME scope Maps
+// BLACK THEME Maps: This partial loads BLACK THEME scope Maps
 // - Each map contains a token scope
 // - Maps are assigned with 'tokens' from the 'tokens' Scope
 
 @import "maps/colors";
-@import "maps/content";
 @import "maps/legacy-colors";
-@import "maps/legacy-keys";
+@import "maps/content";
 @import "maps/keys";
 @import "maps/shadows";
