--- a/src/core/_tokens.scss
+++ b/src/core/_tokens.scss
@@ -4,4 +4,5 @@
 @import "tokens/radius";
 @import "tokens/shadows";
 @import "tokens/spacing";
+@import "tokens/fonts";
 @import "tokens/typography";
