--- a/src/themes/basic/maps/_content.scss
+++ b/src/themes/basic/maps/_content.scss
@@ -3,127 +3,127 @@
 // - Map is collected into the $theme-basic-settings map and is interpolated into custom properties.
 
 $theme-basic-content-colors: (
-        color-grass_green: $color-grass_green,
-        color-grass_green-hover: $color-grass_green-hover,
-        color-grass_green-selected: $color-grass_green-selected,
-        color-done-green: $color-done-green,
-        color-done-green-hover: $color-done-green-hover,
-        color-done-green-selected:$color-done-green-selected,
-        color-done-green-selected-with-opacity: $color-done-green-selected-with-opacity,
-        color-bright-green: $color-bright-green,
-        color-bright-green-hover: $color-bright-green-hover,
-        color-bright-green-selected: $color-bright-green-selected,
-        color-saladish: $color-saladish,
-        color-saladish-hover: $color-saladish-hover,
-        color-saladish-selected: $color-saladish-selected,
-        color-egg_yolk: $color-egg_yolk,
-        color-egg_yolk-hover: $color-egg_yolk-hover,
-        color-egg_yolk-selected: $color-egg_yolk-selected,
-        color-egg_yolk-rgb: $color-egg_yolk-rgb,
-        color-working_orange: $color-working_orange,
-        color-working_orange-hover: $color-working_orange-hover,
-        color-working_orange-selected: $color-working_orange-selected,
-        color-dark-orange: $color-dark-orange,
-        color-dark-orange-hover: $color-dark-orange-hover,
-        color-dark-orange-selected: $color-dark-orange-selected,
-        color-peach: $color-peach,
-        color-peach-hover: $color-peach-hover,
-        color-peach-selected: $color-peach-selected,
-        color-sunset: $color-sunset,
-        color-sunset-hover: $color-sunset-hover,
-        color-sunset-selected: $color-sunset-selected,
-        color-sunset-selected-with-opacity: $color-sunset-selected-with-opacity,
-        color-stuck-red: $color-stuck-red,
-        color-stuck-red-hover: $color-stuck-red-hover,
-        color-stuck-red-selected: $color-stuck-red-selected,
-        color-dark-red: $color-dark-red,
-        color-dark-red-hover: $color-dark-red-hover,
-        color-dark-red-selected: $color-dark-red-selected,
-        color-sofia_pink: $color-sofia_pink,
-        color-sofia_pink-hover: $color-sofia_pink-hover,
-        color-sofia_pink-selected: $color-sofia_pink-selected,
-        color-lipstick: $color-lipstick,
-        color-lipstick-hover: $color-lipstick-hover,
-        color-lipstick-selected: $color-lipstick-selected,
-        color-bubble: $color-bubble,
-        color-bubble-hover: $color-bubble-hover,
-        color-bubble-selected: $color-bubble-selected,
-        color-purple: $color-purple,
-        color-purple-hover: $color-purple-hover,
-        color-purple-selected: $color-purple-selected,
-        color-dark_purple: $color-dark_purple,
-        color-dark_purple-hover: $color-dark_purple-hover,
-        color-dark_purple-selected: $color-dark_purple-selected,
-        color-berry: $color-berry,
-        color-berry-hover: $color-berry-hover,
-        color-berry-selected: $color-berry-selected,
-        color-dark_indigo: $color-dark_indigo,
-        color-dark_indigo-hover: $color-dark_indigo-hover,
-        color-dark_indigo-selected: $color-dark_indigo-selected,
-        color-indigo: $color-indigo,
-        color-indigo-hover: $color-indigo-hover,
-        color-indigo-selected: $color-indigo-selected,
-        color-navy: $color-navy,
-        color-navy-hover: $color-navy-hover,
-        color-navy-selected: $color-navy-selected,
-        color-bright-blue: $color-bright-blue,
-        color-bright-blue-hover: $color-bright-blue-hover,
-        color-bright-blue-selected: $color-bright-blue-selected,
-        color-dark-blue: $color-dark-blue,
-        color-dark-blue-hover: $color-dark-blue-hover,
-        color-dark-blue-selected: $color-dark-blue-selected,
-        color-aquamarine: $color-aquamarine,
-        color-aquamarine-hover: $color-aquamarine-hover,
-        color-aquamarine-selected: $color-aquamarine-selected,
-        color-chili-blue: $color-chili-blue,
-        color-chili-blue-hover: $color-chili-blue-hover,
-        color-chili-blue-selected: $color-chili-blue-selected,
-        color-river: $color-river,
-        color-river-hover: $color-river-hover,
-        color-river-selected: $color-river-selected,
-        color-winter: $color-winter,
-        color-winter-hover: $color-winter-hover,
-        color-winter-selected: $color-winter-selected,
-        color-explosive: $color-explosive,
-        color-explosive-hover: $color-explosive-hover,
-        color-explosive-selected: $color-explosive-selected,
-        color-american_gray: $color-american_gray,
-        color-american_gray-hover: $color-american_gray-hover,
-        color-american_gray-selected: $color-american_gray-selected,
-        color-blackish: $color-blackish,
-        color-blackish-hover: $color-blackish-hover,
-        color-blackish-selected: $color-blackish-selected,
-        color-brown: $color-brown,
-        color-brown-hover: $color-brown-hover,
-        color-brown-selected: $color-brown-selected,
-        color-orchid: $color-orchid,
-        color-orchid-hover: $color-orchid-hover,
-        color-orchid-selected: $color-orchid-selected,
-        color-tan: $color-tan,
-        color-tan-hover: $color-tan-hover,
-        color-tan-selected: $color-royal-selected,
-        color-sky: $color-sky,
-        color-sky-hover: $color-sky-hover,
-        color-sky-selected: $color-sky-selected,
-        color-coffee: $color-coffee,
-        color-coffee-hover: $color-coffee-hover,
-        color-coffee-selected: $color-coffee-selected,
-        color-royal: $color-royal,
-        color-royal-hover: $color-royal-hover,
-        color-royal-selected: $color-royal-selected,
-        color-teal: $color-teal,
-        color-teal-hover: $color-teal-hover,
-        color-teal-selected: $color-teal-selected,
-        color-lavender: $color-lavender,
-        color-lavender-hover: $color-lavender-hover,
-        color-lavender-selected: $color-lavender-selected,
-        color-steel: $color-steel,
-        color-steel-hover: $color-steel-hover,
-        color-steel-selected: $color-steel-selected,
-        color-lilac: $color-lilac,
-        color-lilac-hover:$color-lilac-hover,
-        color-lilac-selected: $color-lilac-selected,
-        color-pecan: $color-pecan,
-        color-pecan-hover: $color-pecan-hover,
-        color-pecan-selected: $color-pecan-selected,
+        color-grass_green: $color-content-grass_green,
+        color-grass_green-hover: $color-content-grass_green-hover,
+        color-grass_green-selected: $color-content-grass_green-selected,
+        color-done-green: $color-content-done-green,
+        color-done-green-hover: $color-content-done-green-hover,
+        color-done-green-selected:$color-content-done-green-selected,
+        color-done-green-selected-with-opacity: $color-content-done-green-selected-with-opacity,
+        color-bright-green: $color-content-bright-green,
+        color-bright-green-hover: $color-content-bright-green-hover,
+        color-bright-green-selected: $color-content-bright-green-selected,
+        color-saladish: $color-content-saladish,
+        color-saladish-hover: $color-content-saladish-hover,
+        color-saladish-selected: $color-content-saladish-selected,
+        color-egg_yolk: $color-content-egg_yolk,
+        color-egg_yolk-hover: $color-content-egg_yolk-hover,
+        color-egg_yolk-selected: $color-content-egg_yolk-selected,
+        color-egg_yolk-rgb: $color-content-egg_yolk-rgb,
+        color-working_orange: $color-content-working_orange,
+        color-working_orange-hover: $color-content-working_orange-hover,
+        color-working_orange-selected: $color-content-working_orange-selected,
+        color-dark-orange: $color-content-dark-orange,
+        color-dark-orange-hover: $color-content-dark-orange-hover,
+        color-dark-orange-selected: $color-content-dark-orange-selected,
+        color-peach: $color-content-peach,
+        color-peach-hover: $color-content-peach-hover,
+        color-peach-selected: $color-content-peach-selected,
+        color-sunset: $color-content-sunset,
+        color-sunset-hover: $color-content-sunset-hover,
+        color-sunset-selected: $color-content-sunset-selected,
+        color-sunset-selected-with-opacity: $color-content-sunset-selected-with-opacity,
+        color-stuck-red: $color-content-stuck-red,
+        color-stuck-red-hover: $color-content-stuck-red-hover,
+        color-stuck-red-selected: $color-content-stuck-red-selected,
+        color-dark-red: $color-content-dark-red,
+        color-dark-red-hover: $color-content-dark-red-hover,
+        color-dark-red-selected: $color-content-dark-red-selected,
+        color-sofia_pink: $color-content-sofia_pink,
+        color-sofia_pink-hover: $color-content-sofia_pink-hover,
+        color-sofia_pink-selected: $color-content-sofia_pink-selected,
+        color-lipstick: $color-content-lipstick,
+        color-lipstick-hover: $color-content-lipstick-hover,
+        color-lipstick-selected: $color-content-lipstick-selected,
+        color-bubble: $color-content-bubble,
+        color-bubble-hover: $color-content-bubble-hover,
+        color-bubble-selected: $color-content-bubble-selected,
+        color-purple: $color-content-purple,
+        color-purple-hover: $color-content-purple-hover,
+        color-purple-selected: $color-content-purple-selected,
+        color-dark_purple: $color-content-dark_purple,
+        color-dark_purple-hover: $color-content-dark_purple-hover,
+        color-dark_purple-selected: $color-content-dark_purple-selected,
+        color-berry: $color-content-berry,
+        color-berry-hover: $color-content-berry-hover,
+        color-berry-selected: $color-content-berry-selected,
+        color-dark_indigo: $color-content-dark_indigo,
+        color-dark_indigo-hover: $color-content-dark_indigo-hover,
+        color-dark_indigo-selected: $color-content-dark_indigo-selected,
+        color-indigo: $color-content-indigo,
+        color-indigo-hover: $color-content-indigo-hover,
+        color-indigo-selected: $color-content-indigo-selected,
+        color-navy: $color-content-navy,
+        color-navy-hover: $color-content-navy-hover,
+        color-navy-selected: $color-content-navy-selected,
+        color-bright-blue: $color-content-bright-blue,
+        color-bright-blue-hover: $color-content-bright-blue-hover,
+        color-bright-blue-selected: $color-content-bright-blue-selected,
+        color-dark-blue: $color-content-dark-blue,
+        color-dark-blue-hover: $color-content-dark-blue-hover,
+        color-dark-blue-selected: $color-content-dark-blue-selected,
+        color-aquamarine: $color-content-aquamarine,
+        color-aquamarine-hover: $color-content-aquamarine-hover,
+        color-aquamarine-selected: $color-content-aquamarine-selected,
+        color-chili-blue: $color-content-chili-blue,
+        color-chili-blue-hover: $color-content-chili-blue-hover,
+        color-chili-blue-selected: $color-content-chili-blue-selected,
+        color-river: $color-content-river,
+        color-river-hover: $color-content-river-hover,
+        color-river-selected: $color-content-river-selected,
+        color-winter: $color-content-winter,
+        color-winter-hover: $color-content-winter-hover,
+        color-winter-selected: $color-content-winter-selected,
+        color-explosive: $color-content-explosive,
+        color-explosive-hover: $color-content-explosive-hover,
+        color-explosive-selected: $color-content-explosive-selected,
+        color-american_gray: $color-content-american_gray,
+        color-american_gray-hover: $color-content-american_gray-hover,
+        color-american_gray-selected: $color-content-american_gray-selected,
+        color-blackish: $color-content-blackish,
+        color-blackish-hover: $color-content-blackish-hover,
+        color-blackish-selected: $color-content-blackish-selected,
+        color-brown: $color-content-brown,
+        color-brown-hover: $color-content-brown-hover,
+        color-brown-selected: $color-content-brown-selected,
+        color-orchid: $color-content-orchid,
+        color-orchid-hover: $color-content-orchid-hover,
+        color-orchid-selected: $color-content-orchid-selected,
+        color-tan: $color-content-tan,
+        color-tan-hover: $color-content-tan-hover,
+        color-tan-selected: $color-content-tan-selected,
+        color-sky: $color-content-sky,
+        color-sky-hover: $color-content-sky-hover,
+        color-sky-selected: $color-content-sky-selected,
+        color-coffee: $color-content-coffee,
+        color-coffee-hover: $color-content-coffee-hover,
+        color-coffee-selected: $color-content-coffee-selected,
+        color-royal: $color-content-royal,
+        color-royal-hover: $color-content-royal-hover,
+        color-royal-selected: $color-content-royal-selected,
+        color-teal: $color-content-teal,
+        color-teal-hover: $color-content-teal-hover,
+        color-teal-selected: $color-content-teal-selected,
+        color-lavender: $color-content-lavender,
+        color-lavender-hover: $color-content-lavender-hover,
+        color-lavender-selected: $color-content-lavender-selected,
+        color-steel: $color-content-steel,
+        color-steel-hover: $color-content-steel-hover,
+        color-steel-selected: $color-content-steel-selected,
+        color-lilac: $color-content-lilac,
+        color-lilac-hover:$color-content-lilac-hover,
+        color-lilac-selected: $color-content-lilac-selected,
+        color-pecan: $color-content-pecan,
+        color-pecan-hover: $color-content-pecan-hover,
+        color-pecan-selected: $color-content-pecan-selected,
 );
