--- a/src/themes/basic/tokens/colors/_content.scss
+++ b/src/themes/basic/tokens/colors/_content.scss
@@ -1,205 +1,205 @@
-// THEME BASIC TOKENS: CONTENT COLORS
+//  BASIC THEME  TOKENS: CONTENT COLORS
 // - This partial defines Basic Theme's content color tokens
 
 // green grass
-$color-grass_green: #037f4c;
-$color-grass_green-hover: #116846;
-$color-grass_green-selected: #81bfa5;
+$color-content-grass_green: #037f4c;
+$color-content-grass_green-hover: #116846;
+$color-content-grass_green-selected: #81bfa5;
 
 // done green
-$color-done-green: #00c875;
-$color-done-green-hover: #0f9b63;
-$color-done-green-selected: #80e3ba;
-$color-done-green-selected-with-opacity: rgba(128, 227, 186, 0.6);
+$color-content-done-green: #00c875;
+$color-content-done-green-hover: #0f9b63;
+$color-content-done-green-selected: #80e3ba;
+$color-content-done-green-selected-with-opacity: rgba($color-content-done-green-selected, 0.6);
 
 // Bright Green
-$color-bright-green: #9cd326;
-$color-bright-green-hover: #7ca32b;
-$color-bright-green-selected: #cde992;
+$color-content-bright-green: #9cd326;
+$color-content-bright-green-hover: #7ca32b;
+$color-content-bright-green-selected: #cde992;
 
 // Saladish
-$color-saladish: #cab641;
-$color-saladish-hover: #9d8f3e;
-$color-saladish-selected: #e4daa0;
+$color-content-saladish: #cab641;
+$color-content-saladish-hover: #9d8f3e;
+$color-content-saladish-selected: #e4daa0;
 
 // Egg Yolk
-$color-egg_yolk: #ffcb00;
-$color-egg_yolk-hover: #c29e11;
-$color-egg_yolk-selected: #ffe580;
-$color-egg_yolk-rgb: red($color-egg_yolk), green($color-egg_yolk), blue($color-egg_yolk);
+$color-content-egg_yolk: #ffcb00;
+$color-content-egg_yolk-hover: #c29e11;
+$color-content-egg_yolk-selected: #ffe580;
+$color-content-egg_yolk-rgb: extract-rgb($color-content-egg_yolk);
 
 // Working on it
-$color-working_orange: #fdab3d;
-$color-working_orange-hover: #c0873c;
-$color-working_orange-selected: #fed59e;
+$color-content-working_orange: #fdab3d;
+$color-content-working_orange-hover: #c0873c;
+$color-content-working_orange-selected: #fed59e;
 
 // Dark orange
-$color-dark-orange: #ff642e;
-$color-dark-orange-hover: #c25531;
-$color-dark-orange-selected: #ffb196;
+$color-content-dark-orange: #ff642e;
+$color-content-dark-orange-hover: #c25531;
+$color-content-dark-orange-selected: #ffb196;
 
 // Peach Color
-$color-peach: #ffadad;
-$color-peach-hover: #c2888a;
-$color-peach-selected: #ffd6d6;
+$color-content-peach: #ffadad;
+$color-content-peach-hover: #c2888a;
+$color-content-peach-selected: #ffd6d6;
 
 // Sunset Color
-$color-sunset: #ff7575;
-$color-sunset-hover: #c26163;
-$color-sunset-selected: #ffbaba;
-$color-sunset-selected-with-opacity: rgba($color-sunset-selected, 0.6);
+$color-content-sunset: #ff7575;
+$color-content-sunset-hover: #c26163;
+$color-content-sunset-selected: #ffbaba;
+$color-content-sunset-selected-with-opacity: rgba($color-content-sunset-selected, 0.6);
 
 // Stuck red
-$color-stuck-red: #e2445c;
-$color-stuck-red-hover: #ad3f51;
-$color-stuck-red-selected: #f0a1ad;
+$color-content-stuck-red: #e2445c;
+$color-content-stuck-red-hover: #ad3f51;
+$color-content-stuck-red-selected: #f0a1ad;
 
 // Dark red
-$color-dark-red: #bb3354;
-$color-dark-red-hover: #92334c;
-$color-dark-red-selected: #dd99a9;
+$color-content-dark-red: #bb3354;
+$color-content-dark-red-hover: #92334c;
+$color-content-dark-red-selected: #dd99a9;
 
 // Sofia
-$color-sofia_pink: #ff158a;
-$color-sofia_pink-hover: #c21e71;
-$color-sofia_pink-selected: #ff8ac4;
+$color-content-sofia_pink: #ff158a;
+$color-content-sofia_pink-hover: #c21e71;
+$color-content-sofia_pink-selected: #ff8ac4;
 
 // Lipstick color
-$color-lipstick: #ff5ac4;
-$color-lipstick-hover: #c24e9a;
-$color-lipstick-selected: #fface1;
+$color-content-lipstick: #ff5ac4;
+$color-content-lipstick-hover: #c24e9a;
+$color-content-lipstick-selected: #fface1;
 
 // Bubble
-$color-bubble: #faa1f1;
-$color-bubble-hover: #be80ba;
-$color-bubble-selected: #fcd0f8;
+$color-content-bubble: #faa1f1;
+$color-content-bubble-hover: #be80ba;
+$color-content-bubble-selected: #fcd0f8;
 
 // Purple
-$color-purple: #a25ddc;
-$color-purple-hover: #8050ab;
-$color-purple-selected: #d0aeed;
+$color-content-purple: #a25ddc;
+$color-content-purple-hover: #8050ab;
+$color-content-purple-selected: #d0aeed;
 
 // Dark purple
-$color-dark_purple: #784bd1;
-$color-dark_purple-hover: #6344a3;
-$color-dark_purple-selected: #bba5e8;
+$color-content-dark_purple: #784bd1;
+$color-content-dark_purple-hover: #6344a3;
+$color-content-dark_purple-selected: #bba5e8;
 
 // Berry
-$color-berry: #7e3b8a;
-$color-berry-hover: #673971;
-$color-berry-selected: #be9dc4;
+$color-content-berry: #7e3b8a;
+$color-content-berry-hover: #673971;
+$color-content-berry-selected: #be9dc4;
 
 // Dark indigo
-$color-dark_indigo: #401694;
-$color-dark_indigo-hover: #3c1f78;
-$color-dark_indigo-selected: #a08bc9;
+$color-content-dark_indigo: #401694;
+$color-content-dark_indigo-hover: #3c1f78;
+$color-content-dark_indigo-selected: #a08bc9;
 
 // Indigo
-$color-indigo: #5559df;
-$color-indigo-hover: #4b4ead;
-$color-indigo-selected: #aaacef;
+$color-content-indigo: #5559df;
+$color-content-indigo-hover: #4b4ead;
+$color-content-indigo-selected: #aaacef;
 
 // Navy
-$color-navy: #225091;
-$color-navy-hover: #274776;
-$color-navy-selected: #90a7c8;
+$color-content-navy: #225091;
+$color-content-navy-hover: #274776;
+$color-content-navy-selected: #90a7c8;
 
 // Light Blue
-$color-bright-blue: #579bfc;
-$color-bright-blue-hover: #4c7cc1;
-$color-bright-blue-selected: #abcdfd;
+$color-content-bright-blue: #579bfc;
+$color-content-bright-blue-hover: #4c7cc1;
+$color-content-bright-blue-selected: #abcdfd;
 
 // Dark blue
-$color-dark-blue: #0086c0;
-$color-dark-blue-hover: #0f6d97;
-$color-dark-blue-selected: #80c2df;
+$color-content-dark-blue: #0086c0;
+$color-content-dark-blue-hover: #0f6d97;
+$color-content-dark-blue-selected: #80c2df;
 
 // Aquamarine
-$color-aquamarine: #4eccc6;
-$color-aquamarine-hover: #469e9b;
-$color-aquamarine-selected: #a6e5e2;
+$color-content-aquamarine: #4eccc6;
+$color-content-aquamarine-hover: #469e9b;
+$color-content-aquamarine-selected: #a6e5e2;
 
 // Chili Blue
-$color-chili-blue: #66ccff;
-$color-chili-blue-hover: #569ec3;
-$color-chili-blue-selected: #b2e5ff;
+$color-content-chili-blue: #66ccff;
+$color-content-chili-blue-hover: #569ec3;
+$color-content-chili-blue-selected: #b2e5ff;
 
 // River
-$color-river: #68a1bd;
-$color-river-hover: #588095;
-$color-river-selected: #b3d0de;
+$color-content-river: #68a1bd;
+$color-content-river-hover: #588095;
+$color-content-river-selected: #b3d0de;
 
 // winter
-$color-winter: #9aadbd;
-$color-winter-hover: #7b8895;
-$color-winter-selected: #ccd6de;
+$color-content-winter: #9aadbd;
+$color-content-winter-hover: #7b8895;
+$color-content-winter-selected: #ccd6de;
 
 // Explosive
-$color-explosive: #c4c4c4;
-$color-explosive-hover: #98999a;
-$color-explosive-selected: #e1e1e1;
+$color-content-explosive: #c4c4c4;
+$color-content-explosive-hover: #98999a;
+$color-content-explosive-selected: #e1e1e1;
 
 // American Grey
-$color-american_gray: #808080;
-$color-american_gray-hover: #69696a;
-$color-american_gray-selected: #bfbfbf;
+$color-content-american_gray: #808080;
+$color-content-american_gray-hover: #69696a;
+$color-content-american_gray-selected: #bfbfbf;
 
 // Blackish
-$color-blackish: #333333;
-$color-blackish-hover: #222222;
-$color-blackish-selected: #999999;
+$color-content-blackish: #333333;
+$color-content-blackish-hover: #222222;
+$color-content-blackish-selected: #999999;
 
 // Brown
-$color-brown: #7f5347;
-$color-brown-hover: #684943;
-$color-brown-selected: #bfa9a3;
+$color-content-brown: #7f5347;
+$color-content-brown-hover: #684943;
+$color-content-brown-selected: #bfa9a3;
 
 // Orchid
-$color-orchid: #D974B0;
-$color-orchid-hover: #AE5D8D;
-$color-orchid-selected: #ECBAD7;
+$color-content-orchid: #D974B0;
+$color-content-orchid-hover: #AE5D8D;
+$color-content-orchid-selected: #ECBAD7;
 
 // Tan
-$color-tan: #AD967A;
-$color-tan-hover: #8A7862;
-$color-tan-selected: #D6CABC;
+$color-content-tan: #AD967A;
+$color-content-tan-hover: #8A7862;
+$color-content-tan-selected: #D6CABC;
 
 // Sky
-$color-sky: #A1E3F6;
-$color-sky-hover: #81B6C5;
-$color-sky-selected: #D0F1FA;
+$color-content-sky: #A1E3F6;
+$color-content-sky-hover: #81B6C5;
+$color-content-sky-selected: #D0F1FA;
 
 // Coffee
-$color-coffee: #BD816E;
-$color-coffee-hover: #976758;
-$color-coffee-selected: #DEC0B7;
+$color-content-coffee: #BD816E;
+$color-content-coffee-hover: #976758;
+$color-content-coffee-selected: #DEC0B7;
 
 // Royal
-$color-royal: #2B76E5;
-$color-royal-hover: #225EB7;
-$color-royal-selected: #95BBF2;
+$color-content-royal: #2B76E5;
+$color-content-royal-hover: #225EB7;
+$color-content-royal-selected: #95BBF2;
 
 // Teal
-$color-teal: #175A63;
-$color-teal-hover: #12484F;
-$color-teal-selected: #8BACB1;
+$color-content-teal: #175A63;
+$color-content-teal-hover: #12484F;
+$color-content-teal-selected: #8BACB1;
 
 // Lavender
-$color-lavender: #BDA8F9;
-$color-lavender-hover: #9786C7;
-$color-lavender-selected: #DED4FC;
+$color-content-lavender: #BDA8F9;
+$color-content-lavender-hover: #9786C7;
+$color-content-lavender-selected: #DED4FC;
 
 // Steel
-$color-steel: #A9BEE8;
-$color-steel-hover: #8798BA;
-$color-steel-selected: #D4DFF4;
+$color-content-steel: #A9BEE8;
+$color-content-steel-hover: #8798BA;
+$color-content-steel-selected: #D4DFF4;
 
 // Lilac
-$color-lilac: #9D99B9;
-$color-lilac-hover: #7E7A94;
-$color-lilac-selected: #CECCDC;
+$color-content-lilac: #9D99B9;
+$color-content-lilac-hover: #7E7A94;
+$color-content-lilac-selected: #CECCDC;
 
 // Pecan
-$color-pecan: #563E3E;
-$color-pecan-hover: #453232;
-$color-pecan-selected: #AB9F9F;
+$color-content-pecan: #563E3E;
+$color-content-pecan-hover: #453232;
+$color-content-pecan-selected: #AB9F9F;
