--- a/src/themes/basic/tokens/colors/_keys.scss
+++ b/src/themes/basic/tokens/colors/_keys.scss
@@ -1,5 +1,13 @@
-// THEME BASIC TOKENS: SEMANTIC KEYS COLORS
+//  BASIC THEME  TOKENS: SEMANTIC KEYS COLORS
 // - This partial defines Basic Theme's Semantic Keys color tokens
+
+// - Theme keys should hold registration values (colors, content colors, other keys)
+//   - In some case there are unique hex values assignments
+//   - They should be transformed into Registration colors.
+//     - We add some annotation to their scope when found.
+//     - E.g: #d0d4e4 (natural light border)
+// - When several key has the same value and have a connection
+// - We either use $token or var(--token) depending on connection logic and value type.
 
 // primary coloring
 $primary-color: var(--color-basic_blue);
@@ -14,7 +22,7 @@ $primary-text-on-secondary-color: var(--color-mud_black);
 $text-color-on-primary: var(--color-snow_white);
 $text-color-on-primary-with-opacity: var(--color-snow_white-with-opacity);
 $primary-background-color: var(--color-snow_white);
-$primary-background-color-rgb: 255, 255, 255;
+$primary-background-color-rgb: var(--color-snow_white-rgb);
 $primary-background-hover-color: var(--color-ui_grey);
 $primary-background-hover-on-secondary-color: var(--color-ui_grey);
 $grey-background-color: var(--color-riverstone_gray);
@@ -36,8 +44,8 @@ $shareable-color: var(--color-purple);
 // borders
 $ui-border-color: var(--color-wolf_gray);
 $ui-border-on-secondary-color: var(--color-wolf_gray);
-$layout-border-color: #d0d4e4;
-$layout-border-on-secondary-color: #d0d4e4;
+$layout-border-color: #d0d4e4; // todo: should be a registration token (base color token)
+$layout-border-on-secondary-color: $layout-border-color;
 
 $placeholder-color: var(--color-asphalt);
 $placeholder-color-with-opacity: var(--color-asphalt-with-opacity);
@@ -48,13 +56,13 @@ $icon-on-secondary-color: var(--color-asphalt);
 // disabled
 $disabled-background-color: var(--color-ui_grey);
 $disabled-background-on-secondary-color: var(--color-ui_grey);
-$disabled-text-color: #676879;
-$disabled-text-on-secondary-color: #676879;
+$disabled-text-color: var(--color-asphalt);
+$disabled-text-on-secondary-color: $disabled-text-color;
 
 $dark-background-color: var(--color-riverstone_gray);
 $dark-background-on-secondary-color: var(--color-riverstone_gray);
 $secondary-background-color: var(--color-snow_white);
-$secondary-background-color-rgb: 255, 255, 255;
+$secondary-background-color-rgb: var(--color-snow_white-rgb);
 
 //deprecated - use secondary-background-color
 $dialog-background-color: var(--color-snow_white);
@@ -66,7 +74,7 @@ $secondary-text-on-secondary-color: var(--color-asphalt);
 $link-color: var(--color-link_color);
 $link-on-secondary-color: var(--color-link_color);
 
-$shadow-color: #000000;
+$shadow-color: $color-black;
 $shadow-small: $shadow-size-small rgba($shadow-color, $shadow-opacity);
 $shadow-medium: $shadow-size-medium rgba($shadow-color, $shadow-opacity);
 $shadow-large: $shadow-size-large rgba($shadow-color, $shadow-large-opacity);
