--- a/src/themes/basic/tokens/styles/_shadows.scss
+++ b/src/themes/basic/tokens/styles/_shadows.scss
@@ -1,7 +1,7 @@
 // THEME BASIC TOKENS: SHADOWS
 // - This partial defines Basic Theme's shadow tokens
 
-$box-shadow-color: #000000;
+$box-shadow-color: $color-black;
 
 $box-shadow-small: $shadow-size-small rgba($box-shadow-color, $shadow-opacity);
 $box-shadow-medium: $shadow-size-medium rgba($box-shadow-color, $shadow-opacity);
